--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.545.0",
     "next": "^14.2.33",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
-    "next-themes": "0.3.0",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -28,6 +29,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "10.4.19",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.5.4",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.10",
     "typescript": "5.4.5"
