Production-ready deployment with luxury email system
 Features:
- Complete autonomous research assistant (ARA) system
- Ultra-luxury email templates with universal compatibility
- Premium AI-powered research reports with PDF export
- Production-ready error handling and validation
- Email notifications for research completion/errors

 Technical improvements:
- Removed all social media elements from email templates for universal email client compatibility
- Fixed TypeScript errors across all modules
- Enhanced EmailTemplateData interface with optional errorMessage field
- Improved error handling in API routes and PDF generation
- Production build validation successful

 Deployment:
- Successfully deployed to Vercel production
- All systems operational and validated
- Luxury email templates working universally across email clients

 Email system:
- Premium HTML templates with luxury design standards
- Universal compatibility (no SVG dependencies)
- Professional branding and responsive design
- Error and completion notification templates

--- a/.env.production.example
+++ b/.env.production.example
@@ -11,6 +11,9 @@ SMTP_PASS=Uwbw2Ss66Jk2
 EMAIL_FROM=hello@neuraforge.tech
 EMAIL_TO=hello@neuraforge.tech
 
+# Application URLs  
+NEXT_PUBLIC_BASE_URL=https://neuraforge.tech
+
 # Next.js Environment
 NODE_ENV=production
 
