--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
+    "@prisma/client": "^6.17.0",
+    "@types/jsdom": "^27.0.0",
+    "@upstash/redis": "^1.35.5",
+    "@vercel/blob": "^2.0.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
+    "jsdom": "^27.0.0",
     "lucide-react": "^0.545.0",
+    "marked": "^16.4.0",
     "next": "^14.2.33",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
+    "openai": "^6.2.0",
+    "playwright": "^1.56.0",
+    "prisma": "^6.17.0",
+    "puppeteer": "^24.23.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "^4.1.11"
