--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "tailwindcss": "3.4.10",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
-    "zod": "^4.1.11"
-  },
-  "devDependencies": {
     "@types/node": "24.6.2",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "typescript": "5.4.5",
+    "zod": "^4.1.11"
+  },
+  "devDependencies": {
     "eslint": "8.57.1",
-    "eslint-config-next": "15.5.4",
-    "typescript": "5.4.5"
+    "eslint-config-next": "15.5.4"
   }
 }
